# programmingpractices

./: .clang-format  .gitignore  BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  README.md  main.cpp
codility/: CMakeLists.txt  main.cpp
graph/: graph.h  main.cpp
hackerRank-Challenges/: README.md  revise_hackerrank_shortest_path_version.cpp
hackerRank-Challenges/medium-level/trees-IsThisABinaryTree?/: main  main.cpp
hackerRank-Challenges/medium-level/trie/: main.cpp
hackerRank-Challenges/medium-level/trie/test/: custom_test.txt
hackerrank/: README.md
hackerrank/easy-level/arrays-LeftRotation/: main.cpp
hackerrank/easy-level/hourglass/: main.cpp
hackerrank/medium-level/trie/: CMakeLists.txt
hackerrank/medium-level/trie/test/: generate.cpp
includes/: genericphc1.hpp
leetcode/: .gitignore
leetcode/easy/: add_strings.cpp
leetcode/medium/add_two_numbers/: add_two_numbers.cpp
leetcode/trees/: .gitignore  TreeNodeHandler.h  by_level_traversal.cpp  post_order_traversal.cpp  tree_exercise_skeleton.cpp
medium/3sum/: iterative.cpp  recursive.cpp  test.cpp
recursion/: factorial.c  fibonacci.c  fibonacci.cpp  hanoi_tower.cpp  mathematical_table_of_n.cpp  matrix_topleft_to_bottomright.cpp  maximum_sub_array.cpp  nested_recursion.c  sum_num.c  sum_previous_array_numbers.c  sum_previous_array_numbers.cpp
sorting/: NOT_WORKING_quicksort.cpp  countingsort.cpp  mergesort.cpp  quicksort.cpp
src/: BinaryTree.cpp  main.cpp
structures/binaryTreeImp/: BinaryTree.cpp  BinaryTree.h  main.cpp
structures/heaps/: main.cpp  max_heap.h
structures/lists/: circular_double_linked_list.h  circular_single_linked_list.h  double_linked_list.h  main.cpp  single_linked_list.h  unit_test.h
structures/lists/single/: circular_list.h  list.h  main.cpp  unit_test.h
structures/priority_queue/: main.cpp  max_priority_queue.h  priority_queue.h
structures/trees/: avl_tree.h  binary_search_tree.h  in_order_traversal.cpp  in_order_traversal_iterative.cpp  main.cpp  pre_order_traversal.cpp  red_black_tree.h  unit_test.h
structures/trees/red_black/: binary_search_tree.h  main.cpp  red_black_tree.h  unit_test.h
structures/trees/traverse_methods_ite_rec/: TreeNodeHandler.cpp  post_order_traversal_iterative.cpp  pre_order_traversal_iterative.cpp
structures/vector/: main.cpp  unit_test.h  vector.h
trees/: Makefile  in_order_traversal_iterative.cpp  post_order_traversal.cpp  post_order_traversal_iterative.cpp  pre_order_traversal.cpp  pre_order_traversal_iterative.cpp  tree_exercise_skeleton.cpp
udemy_courses_practices/mast_data_structures_and_algorithms/custom_structures/: array.h  main.cpp
udemy_courses_practices/mast_data_structures_and_algorithms/recursion/: pow.c  sum_num.c
